--- a/index.html
+++ b/index.html
@@ -1,161 +1,160 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-	<title>Mindfulness</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
+
+	<head>
+		<title>Mindfulness</title>
+		<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+		<link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />   
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
+	</head>
 	
-<body>
-	<header>
-		<h1></h1>
-	</header>
+	<body>
+		<header>
+			<h1>Om</h1>
+		</header>
 
-	<div id="board">
-	<div class="row">
-		<div class="cell">
-			<img src="img/bakasana.jpg"/>
-		</div>
+		<div id="board">
+			<div class="row">
+				<div class="cell">
+				<img src="img/bakasana.jpg"/>
+				</div>
 
-		<div class="cell">
-		foo
+				<div class="cell">
+				foo
+				</div>
 
+				<div class="cell">
+				foo
+				</div>
 
-		</div>
+				<div class="cell">
+				<img src="img/mayurasana.jpg"/>
+				</div>
 
-		<div class="cell">
-			foo
+				<div class="cell">
+				<img src="img/balasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				mayurasana
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				<img src="img/bharadvajasana_I.jpg"/>
+				</div>
+
+			</div>
+
+			<div class="row">
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				<img src="img/garudasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				<img src="img/eka_pada_rajakapotasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				<img src="img/Marichyasana_I.jpg"/>
+				</div>
+
+				<div class="cell">
+				<img src="img/natarajasana.jpg"/>
+				</div>
+
+				<div class="cell">
+			 	foo
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="cell">
+				<img src="img/parivrtta_trikonasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+					<img src="img/pasasana.jpg"/>
+				</div>
+
+				<div class="cell">
+					<img src="img/purvottanasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				 foo
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+				<div class="cell">
+					<img src="img/salabhasana.jpg"/>
+				</div>
+			</div>
+
 			
+			<div class="row">
+				<div class="cell" >
+				<img src="img/utkatasana.jpg"/>
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				<img src="img/virabhadrasana_I.jpg"/>
+				</div>
+
+				<div class="cell">
+				<img src="img/virabhadrasana_II.jpg"/>
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				foo
+				</div>
+
+				<div class="cell">
+				<img src="img/virabhadrasana_III.jpg"/>
+				</div>
+			</div>
 		</div>
-
-		<div class="cell">
-			<img src="img/mayurasana.jpg"/>
-		</div>
-
-		<div class="cell">
-			<img src="img/balasana.jpg"/>
-		</div>
-
-		<div class="cell">
-			foo
-		</div>
-
-		<div class="cell">
-			foo
-		</div>
-
-		<div class="cell">
-			<img src="img/bharadvajasana_I.jpg"/>
-		</div>
-
-	</div>
-
-	<div class="row">
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-		 <img src="img/garudasana.jpg"/>
-		</div>
-
-		<div class="cell">
-			<img src="img/eka_pada_rajakapotasana.jpg"/>
-		</div>
-
-		<div class="cell">
-		foo
-
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-			<img src="img/Marichyasana_I.jpg"/>
-		</div>
-
-		<div class="cell">
-			<img src="img/natarajasana.jpg"/>
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-		
-	</div>
-
-	<div class="row">
-		<div class="cell">
-			<img src="img/parivrtta_trikonasana.jpg"/>
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-			<img src="img/pasasana.jpg"/>
-		</div>
-
-		<div class="cell">
-			<img src="img/purvottanasana.jpg"/>
-		</div>
-
-		<div class="cell">
-		 foo
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-	
-
-		<div class="cell">
-			<img src="img/salabhasana.jpg"/>
-		</div>
-	</div>
-
-	<div class="row">
-
-		<div class="cell">
-			<img src="img/utkatasana.jpg"/>
-		</div>
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-			<img src="img/virabhadrasana_I.jpg"/>
-		</div>
-
-		<div class="cell">
-			<img src="img/virabhadrasana_II.jpg"/>
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-		foo
-		</div>
-
-		<div class="cell">
-			<img src="img/virabhadrasana_III.jpg"/>
-		</div>
-	</div>
-
-	</div>
-
-</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	</body>
 </html>
