board is drag/drop ready

--- a/index.html
+++ b/index.html
@@ -12,147 +12,165 @@
 	
 	<body>
 		<header>
-			<h1>Om</h1>
+			<h1>yogas-citta-vrtti-nirodhah</h1>
 		</header>
 
 		<div id="board">
 			<div class="row">
-				<div class="cell">
+				<div id="1" class="cell photo">
 				<img src="img/bakasana.jpg"/>
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="2" class="cell">
+				balasana
+				<!-- accepts id 5 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="3" class="cell"> 
+				bakasuna
+				<!-- accepts id 1 -->
 				</div>
 
-				<div class="cell">
+				<div id="4" class="cell photo">
 				<img src="img/mayurasana.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="5" class="cell photo">
 				<img src="img/balasana.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="6" class="cell">
+				bharadvajasana I
+				<!-- accepts id 8 -->
+				</div>
+
+				<div  id="7" class="cell">
 				mayurasana
+				<!-- accepts id 4 -->
 				</div>
 
-				<div class="cell">
-				foo
-				</div>
-
-				<div class="cell">
+				<div id="8" class="cell photo">
 				<img src="img/bharadvajasana_I.jpg"/>
 				</div>
 
 			</div>
 
 			<div class="row">
-				<div class="cell">
-				foo
+				<div id='9' class="cell">
+				natarajasana
+				<!-- accepts id 15 -->
 				</div>
 
-				<div class="cell">
+				<div id="10" class="cell photo">
 				<img src="img/garudasana.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="11" class="cell photo">
 				<img src="img/eka_pada_rajakapotasana.jpg"/>
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="12" class="cell">
+				garudasana
+				<!-- accepts id 10 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="13" class="cell">
+				Marichyasana I
+			<!-- 	accepts id 14 -->
 				</div>
 
-				<div class="cell">
+				<div id="14" class="cell photo">
 				<img src="img/Marichyasana_I.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="15" class="cell photo">
 				<img src="img/natarajasana.jpg"/>
 				</div>
 
-				<div class="cell">
-			 	foo
+				<div id="16" class="cell">
+			 	eka pada rajakapotasana
+			 	<!-- accepts id 11 -->
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="cell">
+				<div id="17" class="cell photo">
 				<img src="img/parivrtta_trikonasana.jpg"/>
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="18"class="cell">
+				pasasana
+				<!-- accepts id 20 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="19" class="cell">
+				parivrtta trikonasana
+				<!-- accepts id 17 -->
 				</div>
 
-				<div class="cell">
+				<div id="20" class="cell photo">
 					<img src="img/pasasana.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="21" class="cell photo">
 					<img src="img/purvottanasana.jpg"/>
 				</div>
 
-				<div class="cell">
-				 foo
+				<div id="22" class="cell">
+				 purvottanasana
+				 <!-- accepts id 21 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="23" class="cell">
+				salabhasana
+				<!-- accepts id 24 -->
 				</div>
-				<div class="cell">
+
+				<div id="24" class="cell photo">
 					<img src="img/salabhasana.jpg"/>
 				</div>
 			</div>
 
 			
 			<div class="row">
-				<div class="cell" >
+				<div id="25" class="cell photo" >
 				<img src="img/utkatasana.jpg"/>
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="26" class="cell">
+				virabhadrasana II
+				<!-- accepts id 29 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="27" class="cell">
+				virabhadrasana III
+				<!-- accepts id 32 -->
 				</div>
 
-				<div class="cell">
+				<div id="28" class="cell photo">
 				<img src="img/virabhadrasana_I.jpg"/>
 				</div>
 
-				<div class="cell">
+				<div id="29" class="cell photo">
 				<img src="img/virabhadrasana_II.jpg"/>
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="30" class="cell">
+				virabhadrasana I
+				<!-- accepts id 28 -->
 				</div>
 
-				<div class="cell">
-				foo
+				<div id="31" class="cell">
+				utkatasana
+				<!-- accepts id 25 -->
 				</div>
 
-				<div class="cell">
+				<div id="32" class="cell photo">
 				<img src="img/virabhadrasana_III.jpg"/>
 				</div>
 			</div>
 		</div>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
