--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
 		<title>Mindfulness</title>
 		<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
 		<link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />   
+		<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
+
 	</head>
 	
 	<body>
 		<header>
+			<div class="scoreBox" id="playerOneScore">
+			Player One
+			 <div class="displayScore" id="displayScoreOne"> </div> 
+			 </div>
+
 			<h1>yogas-citta-vrtti-nirodhah</h1>
+
+			<div class="scoreBox" id="playerTwoScore">
+			Player Two
+			<div class="displayScore" id="displayScoreTwo"></div>
+			</div>
 		</header>
 
 		<div id="board">
@@ -173,6 +186,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script src="js/sweetalert.min.js"></script> 
 	<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
