scorekeeping functionality achieved

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 				<img src="img/bakasana.jpg"/>
 				</div>
 
-				<div id="2" class="cell">
+				<div id="2" class="cell poseCard">
 				balasana
 				<!-- accepts id 5 -->
 				</div>
 
-				<div id="3" class="cell"> 
-				bakasuna
+				<div id="3" class="cell poseCard"> 
+				bakasana
 				<!-- accepts id 1 -->
 				</div>
 
@@ -52,12 +52,12 @@
 				<img src="img/balasana.jpg"/>
 				</div>
 
-				<div id="6" class="cell">
+				<div id="6" class="cell poseCard">
 				bharadvajasana I
 				<!-- accepts id 8 -->
 				</div>
 
-				<div  id="7" class="cell">
+				<div  id="7" class="cell poseCard">
 				mayurasana
 				<!-- accepts id 4 -->
 				</div>
@@ -69,7 +69,7 @@
 			</div>
 
 			<div class="row">
-				<div id='9' class="cell">
+				<div id='9' class="cell poseCard">
 				natarajasana
 				<!-- accepts id 15 -->
 				</div>
@@ -82,12 +82,12 @@
 				<img src="img/eka_pada_rajakapotasana.jpg"/>
 				</div>
 
-				<div id="12" class="cell">
+				<div id="12" class="cell poseCard">
 				garudasana
 				<!-- accepts id 10 -->
 				</div>
 
-				<div id="13" class="cell">
+				<div id="13" class="cell poseCard">
 				Marichyasana I
 			<!-- 	accepts id 14 -->
 				</div>
@@ -100,7 +100,7 @@
 				<img src="img/natarajasana.jpg"/>
 				</div>
 
-				<div id="16" class="cell">
+				<div id="16" class="cell poseCard">
 			 	eka pada rajakapotasana
 			 	<!-- accepts id 11 -->
 				</div>
@@ -111,12 +111,12 @@
 				<img src="img/parivrtta_trikonasana.jpg"/>
 				</div>
 
-				<div id="18"class="cell">
+				<div id="18"class="cell poseCard">
 				pasasana
 				<!-- accepts id 20 -->
 				</div>
 
-				<div id="19" class="cell">
+				<div id="19" class="cell poseCard">
 				parivrtta trikonasana
 				<!-- accepts id 17 -->
 				</div>
@@ -129,12 +129,12 @@
 					<img src="img/purvottanasana.jpg"/>
 				</div>
 
-				<div id="22" class="cell">
+				<div id="22" class="cell poseCard">
 				 purvottanasana
 				 <!-- accepts id 21 -->
 				</div>
 
-				<div id="23" class="cell">
+				<div id="23" class="cell poseCard">
 				salabhasana
 				<!-- accepts id 24 -->
 				</div>
@@ -150,12 +150,12 @@
 				<img src="img/utkatasana.jpg"/>
 				</div>
 
-				<div id="26" class="cell">
+				<div id="26" class="cell poseCard">
 				virabhadrasana II
 				<!-- accepts id 29 -->
 				</div>
 
-				<div id="27" class="cell">
+				<div id="27" class="cell poseCard">
 				virabhadrasana III
 				<!-- accepts id 32 -->
 				</div>
@@ -168,12 +168,12 @@
 				<img src="img/virabhadrasana_II.jpg"/>
 				</div>
 
-				<div id="30" class="cell">
+				<div id="30" class="cell poseCard">
 				virabhadrasana I
 				<!-- accepts id 28 -->
 				</div>
 
-				<div id="31" class="cell">
+				<div id="31" class="cell poseCard">
 				utkatasana
 				<!-- accepts id 25 -->
 				</div>
