alert when game is up

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Mindfulness</title>
+		<title>Asana</title>
 		<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
@@ -20,7 +20,9 @@
 			 <div class="displayScore" id="displayScoreOne"> </div> 
 			 </div>
 
-			<h1>yogas-citta-vrtti-nirodhah</h1>
+			<h1>Asana</h1>
+
+		<!-- 	<input id="stop" type="button" value="New Game" onClick="window.location.reload()"> -->
 
 			<div class="scoreBox" id="playerTwoScore">
 			Player Two
