--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 		<link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />   
 		<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-
 	</head>
 	
 	<body>
 		<header>
 			<div class="scoreBox" id="playerOneScore">
 			Player One
-			 <div class="displayScore" id="displayScoreOne"> </div> 
-			 </div>
+			<div class="displayScore" id="displayScoreOne"> </div> 
+			</div>
 
+			<span>
 			<h1>Asana</h1>
 
-		<!-- 	<input id="stop" type="button" value="New Game" onClick="window.location.reload()"> -->
+			<!-- <ul>
+				<li><button>Easy</button> </li>
+				<li><button>Hard</button> </li>
+			</ul> -->
+			</span>
 
 			<div class="scoreBox" id="playerTwoScore">
 			Player Two
@@ -33,16 +37,16 @@
 		<div id="board">
 			<div class="row">
 				<div id="1" class="cell photo">
-				<img src="img/bakasana.jpg"/>
+					<img src="img/bakasana.jpg"/>
 				</div>
 
 				<div id="2" class="cell poseCard">
-				balasana
+					<p>balasana<p>
 				<!-- accepts id 5 -->
 				</div>
 
 				<div id="3" class="cell poseCard"> 
-				bakasana
+					<p>bakasana<p>
 				<!-- accepts id 1 -->
 				</div>
 
@@ -51,75 +55,74 @@
 				</div>
 
 				<div id="5" class="cell photo">
-				<img src="img/balasana.jpg"/>
+					<img src="img/balasana.jpg"/>
 				</div>
 
 				<div id="6" class="cell poseCard">
-				bharadvajasana I
+					<p>bharadvajasana I<p>
 				<!-- accepts id 8 -->
 				</div>
 
 				<div  id="7" class="cell poseCard">
-				mayurasana
+					<p>mayurasana</p>
 				<!-- accepts id 4 -->
 				</div>
 
 				<div id="8" class="cell photo">
 				<img src="img/bharadvajasana_I.jpg"/>
 				</div>
-
 			</div>
 
 			<div class="row">
 				<div id='9' class="cell poseCard">
-				natarajasana
+					<p>natarajasana</p>
 				<!-- accepts id 15 -->
 				</div>
 
 				<div id="10" class="cell photo">
-				<img src="img/garudasana.jpg"/>
+					<img src="img/garudasana.jpg"/>
 				</div>
 
 				<div id="11" class="cell photo">
-				<img src="img/eka_pada_rajakapotasana.jpg"/>
+					<img src="img/eka_pada_rajakapotasana.jpg"/>
 				</div>
 
 				<div id="12" class="cell poseCard">
-				garudasana
+					<p>garudasana</p>
 				<!-- accepts id 10 -->
 				</div>
 
 				<div id="13" class="cell poseCard">
-				Marichyasana I
+					<p> Marichyasana I </p>
 			<!-- 	accepts id 14 -->
 				</div>
 
 				<div id="14" class="cell photo">
-				<img src="img/Marichyasana_I.jpg"/>
+					<img src="img/Marichyasana_I.jpg"/>
 				</div>
 
 				<div id="15" class="cell photo">
-				<img src="img/natarajasana.jpg"/>
+					<img src="img/natarajasana.jpg"/>
 				</div>
 
 				<div id="16" class="cell poseCard">
-			 	eka pada rajakapotasana
+			 		<p> rajakapotasana </p>
 			 	<!-- accepts id 11 -->
 				</div>
 			</div>
 
 			<div class="row">
 				<div id="17" class="cell photo">
-				<img src="img/parivrtta_trikonasana.jpg"/>
+					<img src="img/parivrtta_trikonasana.jpg"/>
 				</div>
 
 				<div id="18"class="cell poseCard">
-				pasasana
+					<p> pasasana </p>
 				<!-- accepts id 20 -->
 				</div>
 
 				<div id="19" class="cell poseCard">
-				parivrtta trikonasana
+					<p> parivrtta trikonasana </p>
 				<!-- accepts id 17 -->
 				</div>
 
@@ -132,12 +135,12 @@
 				</div>
 
 				<div id="22" class="cell poseCard">
-				 purvottanasana
+				 	<p> purvottanasana </p>
 				 <!-- accepts id 21 -->
 				</div>
 
 				<div id="23" class="cell poseCard">
-				salabhasana
+					<p> salabhasana </p>
 				<!-- accepts id 24 -->
 				</div>
 
@@ -149,46 +152,47 @@
 			
 			<div class="row">
 				<div id="25" class="cell photo" >
-				<img src="img/utkatasana.jpg"/>
+					<img src="img/utkatasana.jpg"/>
 				</div>
 
 				<div id="26" class="cell poseCard">
-				virabhadrasana II
+					<p> virabhadrasana II </p>
 				<!-- accepts id 29 -->
 				</div>
 
 				<div id="27" class="cell poseCard">
-				virabhadrasana III
+					<p> virabhadrasana III </p>
 				<!-- accepts id 32 -->
 				</div>
 
 				<div id="28" class="cell photo">
-				<img src="img/virabhadrasana_I.jpg"/>
+					<img src="img/virabhadrasana_I.jpg"/>
 				</div>
 
 				<div id="29" class="cell photo">
-				<img src="img/virabhadrasana_II.jpg"/>
+					<img src="img/virabhadrasana_II.jpg"/>
 				</div>
 
 				<div id="30" class="cell poseCard">
-				virabhadrasana I
+					<p> virabhadrasana I </p>
 				<!-- accepts id 28 -->
 				</div>
 
 				<div id="31" class="cell poseCard">
-				utkatasana
+					<p> utkatasana </p>
 				<!-- accepts id 25 -->
 				</div>
 
 				<div id="32" class="cell photo">
-				<img src="img/virabhadrasana_III.jpg"/>
+					<img src="img/virabhadrasana_III.jpg"/>
 				</div>
+
 			</div>
 		</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-	<script src="js/sweetalert.min.js"></script> 
-	<script type="text/javascript" src="js/script.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+		<script src="js/sweetalert.min.js"></script> 
+		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
