changed style, added some responsive design, added alerts to each match

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<title>Asana</title>
 		<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
-		<link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />   
+		<link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'> 
 		<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 	</head>
@@ -20,12 +19,7 @@
 			</div>
 
 			<span>
-			<h1>Asana</h1>
-
-			<!-- <ul>
-				<li><button>Easy</button> </li>
-				<li><button>Hard</button> </li>
-			</ul> -->
+			<h1>A s a n a </h1>
 			</span>
 
 			<div class="scoreBox" id="playerTwoScore">
@@ -122,7 +116,7 @@
 				</div>
 
 				<div id="19" class="cell poseCard">
-					<p> parivrtta trikonasana </p>
+					<p>trikonasana </p>
 				<!-- accepts id 17 -->
 				</div>
 
