--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
 	<body>
 		<header>
 			<div class="scoreBox" id="playerOneScore">
-			Player One
-			<div class="displayScore" id="displayScoreOne"> </div> 
+				Player One
+				<div class="displayScore" id="displayScoreOne"> 
+				</div> 
 			</div>
 
-			<span>
-			<h1>A s a n a </h1>
-			</span>
+				<h1>A s a n a </h1>
+		
 
 			<div class="scoreBox" id="playerTwoScore">
-			Player Two
-			<div class="displayScore" id="displayScoreTwo"></div>
+				Player Two
+				<div class="displayScore" id="displayScoreTwo">
+				</div>
 			</div>
 		</header>
 
 		<div id="board">
 			<div class="row">
+				
 				<div id="1" class="cell photo">
 					<img src="img/bakasana.jpg"/>
 				</div>
@@ -45,7 +47,7 @@
 				</div>
 
 				<div id="4" class="cell photo">
-				<img src="img/mayurasana.jpg"/>
+					<img src="img/mayurasana.jpg"/>
 				</div>
 
 				<div id="5" class="cell photo">
@@ -57,13 +59,13 @@
 				<!-- accepts id 8 -->
 				</div>
 
-				<div  id="7" class="cell poseCard">
+				<div id="7" class="cell poseCard">
 					<p>mayurasana</p>
 				<!-- accepts id 4 -->
 				</div>
 
 				<div id="8" class="cell photo">
-				<img src="img/bharadvajasana_I.jpg"/>
+					<img src="img/bharadvajasana_I.jpg"/>
 				</div>
 			</div>
 
@@ -88,7 +90,7 @@
 
 				<div id="13" class="cell poseCard">
 					<p> Marichyasana I </p>
-			<!-- 	accepts id 14 -->
+				<!-- accepts id 14 -->
 				</div>
 
 				<div id="14" class="cell photo">
