--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				</div> 
 			</div>
 
-				<h1>A s a n a </h1>
+				
+			<h1>A s a n a </h1>
 		
 
 			<div class="scoreBox" id="playerTwoScore">
@@ -186,9 +187,18 @@
 			</div>
 		</div>
 
+		<div id="resources">
+			<ul>
+				<a href="http://img.ifcdn.com/images/6a04c6b07318d988dd04236fc60b0ff7f2b68f9cb6b1321296a47ed9cfba4e7d_1.gif "><li>Breathing exercise</li></a>
+				<a href="http://www.yogajournal.com/category/poses/"><li>Pose Directory</li></a>
+				<a href="http://www.decolonizingyoga.com/decolonize-yoga-practice/"><li> Decolonizing Your Practice</li></a>
+			</ul>
+		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 		<script src="js/sweetalert.min.js"></script> 
 		<script type="text/javascript" src="js/script.js"></script>
+
 	</body>
 </html>
